--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,13 @@
 
     <body>
         <h1>Hello World!</h1>
-        Hello World!
+   
+    <form>
+    	<input type="text" name="Full name" placeholder="Type your full name">
+    	<input type="submit" name="submit">
+    </form>
+
+
+
     </body>
 </html>
