--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Hello World!</h1>
-        <h2>Login forms</h2>
+        <h2 style="color: red">Login forms</h2>
    
     <form>
     	<input type="text" name="Full name" placeholder="Type your full name">
